add interactional labels

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -163,7 +163,7 @@
   <header class="page-header">
     <div class="page-header__menu">
       <div class="page-header__menu-logos-links">
-        <a href="index.html" class="page-header__logo-site">
+        <a href="index.html" class="page-header__logo-site" aria-label="header logo">
 
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
@@ -201,7 +201,7 @@
       <div class="main-catalog__good">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <a href="good.html">
+            <a href="good.html" aria-label="good in catalo one">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
@@ -218,7 +218,7 @@
               </picture>
             </a>
             <div class="main-catalog__good-data">
-              <a href="good.html" class="main-catalog__link-to-goods"><span class="main-catalog__good-header">Cat Energy
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog two"><span class="main-catalog__good-header">Cat Energy
                   <span class="main-catalog__good-header-sub">PRO 500 г</span></span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__less-than-thousand">Объем </span>
@@ -234,13 +234,13 @@
               </div>
             </div>
           </div>
-          <a class="main-catalog__good-order" href="basket.html">Заказать</a>
+          <a class="main-catalog__good-order" href="basket.html" aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <a href="good.html">
+            <a href="good.html" aria-label="good in catalog three">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
@@ -261,7 +261,7 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-second">
-              <a href="good.html" class="main-catalog__link-to-goods"><span class="main-catalog__good-header">Cat Energy
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog three"><span class="main-catalog__good-header">Cat Energy
                   <span class="main-catalog__good-header-sub main-catalog__good-header-sub-second">PRO 1000
                     г</span></span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
@@ -278,13 +278,13 @@
               </div>
             </div>
           </div>
-          <a class="main-catalog__good-order" href="basket.html">Заказать</a>
+          <a class="main-catalog__good-order" href="basket.html" aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good main-catalog__good-third-item">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <a href="">
+            <a href="good.html" aria-label="good in catalog fourth">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
@@ -300,7 +300,7 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-third">
-              <a href="good.html" class="main-catalog__link-to-goods"><span class="main-catalog__good-header">Cat Energy
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog fourth"><span class="main-catalog__good-header">Cat Energy
                   <span class="main-catalog__good-header-sub">PRO 500 г</span></span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__less-than-thousand">Объем </span>
@@ -316,13 +316,13 @@
               </div>
             </div>
           </div>
-          <a class="main-catalog__good-order main-catalog__good-order-third-image" href="basket.html">Заказать</a>
+          <a class="main-catalog__good-order main-catalog__good-order-third-image" href="basket.html" aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good main-catalog__good-fourth-item">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <a href="good.html">
+            <a href="good.html" aria-label="good in catalog fifth">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
@@ -338,7 +338,7 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-fourth">
-              <a href="good.html" class="main-catalog__link-to-goods"><span class="main-catalog__good-header">Cat Energy
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog fifth"><span class="main-catalog__good-header">Cat Energy
                   <span class="main-catalog__good-header-sub main-catalog__good-header-sub-fourth">PRO 1000
                     г</span></span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
@@ -355,13 +355,13 @@
               </div>
             </div>
           </div>
-          <a class="main-catalog__good-order" href="basket.html">Заказать</a>
+          <a class="main-catalog__good-order" href="basket.html" aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good main-catalog__good-margin-zero">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <a href="goods.html">
+            <a href="goods.html" aria-label="good in catalog sixth">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
@@ -378,7 +378,7 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-fifth">
-              <a href="goods.html" class="main-catalog__link-to-goods"><span class="main-catalog__good-header">Cat
+              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog sixth"><span class="main-catalog__good-header">Cat
                   Energy <span class="main-catalog__good-header-sub main-catalog__good-header-sub-fifth">SLIM 500
                     г</span></span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
@@ -395,13 +395,13 @@
               </div>
             </div>
           </div>
-          <a class="main-catalog__good-order" href="basket.html">Заказать</a>
+          <a class="main-catalog__good-order" href="basket.html" aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good main-catalog__good-margin-zero">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <a href="">
+            <a href="goods.html" aria-label="good in catalog seventh">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
@@ -418,7 +418,7 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-sixth">
-              <a href="goods.html" class="main-catalog__link-to-goods"><span class="main-catalog__good-header">Cat
+              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog seventh"><span class="main-catalog__good-header">Cat
                   Energy <span class="main-catalog__good-header-sub main-catalog__good-header-sub-sixth">SLIM 1000
                     г</span></span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
@@ -435,13 +435,13 @@
               </div>
             </div>
           </div>
-          <a class="main-catalog__good-order" href="basket.html">Заказать</a>
+          <a class="main-catalog__good-order" href="basket.html" aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good main-catalog__good-last-child main-catalog__good-margin-zero">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <a href="goods.html">
+            <a href="goods.html" aria-label="good in catalog eights">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
@@ -457,7 +457,7 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-seventh">
-              <a href="goods.html" class="main-catalog__link-to-goods"><span class="main-catalog__good-header">Cat
+              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog eights"><span class="main-catalog__good-header">Cat
                   Energy <span class="main-catalog__good-header-sub main-catalog__good-header-sub-seventh">SLIM 500
                     г</span></span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
@@ -474,7 +474,7 @@
               </div>
             </div>
           </div>
-          <a class=" main-catalog__good-order main-catalog__good-order-last-child" href="basket.html">Заказать</a>
+          <a class=" main-catalog__good-order main-catalog__good-order-last-child" href="basket.html" aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good find-all-goods">
@@ -482,7 +482,7 @@
         </div>
         <span class="find-all-goods__show-additional-goods">Показать еще 100500 товаров</span>
         <span class="find-all-goods__more-tastes">На самом деле вкусов гораздо больше!</span>
-        <a class="find-all-goods__show-all-goods" href="show-all.html">Показать все</a>
+        <a class="find-all-goods__show-all-goods" href="show-all.html" aria-label="show all button">Показать все</a>
       </div>
     </section>
     <section class="additional-goods">
@@ -514,7 +514,7 @@
                   </span>
                 </div>
               </div>
-              <a class="additional-goods__article-order" href="basket.html">
+              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
                 Заказать
               </a>
             </div>
@@ -535,7 +535,7 @@
                   </span>
                 </div>
               </div>
-              <a class="additional-goods__article-order" href="basket.html">
+              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
                 Заказать
               </a>
             </div>
@@ -557,7 +557,7 @@
                   </span>
                 </div>
               </div>
-              <a class="additional-goods__article-order" href="basket.html">
+              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
                 Заказать
               </a>
             </div>
@@ -578,7 +578,7 @@
                   </span>
                 </div>
               </div>
-              <a class="additional-goods__article-order" href="basket.html">Заказать</a>
+              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">Заказать</a>
             </div>
           </article>
         </div>
@@ -608,11 +608,11 @@
   <footer class="footer footer-index footer-catalog">
     <div class="footer__footer-content">
       <div class="footer__logo footer__logo-index">
-        <a href="https://catenergy.com"><img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image"></a>
+        <a href="https://catenergy.com" aria-label="footer left logo"><img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image"></a>
       </div>
       <ul class="footer__social-links">
         <li class="footer__social-links-li">
-          <a href="https://vk.com" class="footer__vk-link">
+          <a href="https://vk.com" class="footer__vk-link" aria-label="vk social icon">
             <svg width="22" height="12" class="footer__social-image footer__social-image-vk footer__soc-image">
               <use xlink:href="#icon-vk"></use>
             </svg>
@@ -620,7 +620,7 @@
         </li>
         <li
           class="footer__social-links-li footer__social-links-li-instagramm footer__social-links-li-instagramm-catalog">
-          <a href="https://instagramm.com" class="footer__instagramm-link">
+          <a href="https://instagramm.com" class="footer__instagramm-link" aria-label="insta social icon">
             <svg width="16" height="16" class="footer__social-image footer__social-image-insta footer__soc-image">
               <use xlink:href="#icon-insta"></use>
             </svg>
@@ -635,7 +635,7 @@
         </li>
       </ul>
       <div class="footer__right-logo">
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization" aria-label="footer logo social icon">
           <span class="footer__name-org"> HTML Academy</span>
 
 
