--- a/source/form.html
+++ b/source/form.html
@@ -49,7 +49,7 @@
   <header class="page-header">
     <div class="page-header__menu">
       <div class="page-header__menu-logos-links">
-        <a href="index.html" class="page-header__logo-site">
+        <a href="index.html" class="page-header__logo-site" aria-label="header logo">
 
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
@@ -211,25 +211,25 @@
   <footer class="footer footer-index ">
     <div class="footer__footer-content">
       <div class="footer__logo footer__logo-index footer-logo-form">
-        <img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image">
+        <a href="catenergy.html" aria-label="footer catenergy"><img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image"></a>
       </div>
       <ul class="footer__social-links">
         <li class="footer__social-links-li">
-          <a href="https://vk.com" class="footer__vk-link">
+          <a href="https://vk.com" class="footer__vk-link" aria-label="vk logo social icon">
             <svg width="22" height="12" class="footer__social-image footer__social-image-vk footer__soc-image">
               <use xlink:href="#m-vk"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-links-li footer__social-links-li-instagramm-form">
-          <a href="https://instagramm.com" class="footer__instagramm-link">
+          <a href="https://instagramm.com" class="footer__instagramm-link" aria-label="insta logo social icon">
             <svg width="16" height="16" class="footer__social-image footer__social-image-insta footer__soc-image">
               <use xlink:href="#m-insta"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-links-li footer__social-links-li-facebook footer__social-links-li-facebook-form">
-          <a href="https://facebook.com" class="footer__facebook-link">
+          <a href="https://facebook.com" class="footer__facebook-link" aria-label="facebook logo social icon">
             <svg width="10" height="19" class="footer__social-image footer__social-image-fb footer__soc-image">
               <use xlink:href="#m-fb"></use>
             </svg>
@@ -237,7 +237,7 @@
         </li>
       </ul>
       <div class="footer__right-logo">
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization" aria-label="footer right logo">
           <span class="footer__name-org"> HTML Academy</span>
           <svg class="footer__right-logo-organization" height="34">
             <use xlink:href="#footer-logo-htmlacademy"></use>
