--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,7 @@
   <header class="page-header">
     <div class="page-header__menu">
       <div class="page-header__menu-logos-links">
-        <a href="/" class="page-header__logo-site">
+        <a href="/" class="page-header__logo-site" aria-label="header logo">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -113,7 +113,7 @@
       <img class="header-background__img" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png 2x"
         alt="Индекс большой стакан">
     </picture>
-    <a href="find-program.html" class="header-background__check-your-program"> Подобрать программу</a>
+    <a href="find-program.html" class="header-background__check-your-program" aria-label="check program"> Подобрать программу</a>
   </div>
   <main class="main">
     <section class="programs">
@@ -132,7 +132,7 @@
           Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
         </span>
         <div class="programs__program-main-content-link programs__program-link-catalog-slim">
-          <a href="catalog_slim.html" class="programs__program-link ">Каталог Slim</a>
+          <a href="catalog_slim.html" class="programs__program-link " aria-label="catalog slim">Каталог Slim</a>
           <img src="img/icon-right-arrow-long.svg" alt="right arrow" class="programs__icon-right-arrow-long">
           <img src="img/icon-right-arrow-verylong.svg" alt="right arrow" class="programs__icon-right-arrow-very-long">
         </div>
@@ -152,7 +152,7 @@
           Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
         </span>
         <div class="programs__program-main-content-link programs__program-link-catalog-pro programs__second-link">
-          <a href="catalog_pro.html" class="programs__program-link programs__program-link-catalog-pro-link">Каталог
+          <a href="catalog_pro.html" class="programs__program-link programs__program-link-catalog-pro-link" aria-label="catalog pro">Каталог
             Pro</a>
           <img src="img/icon-right-arrow-long.svg" alt="right arrow" class="programs__icon-right-arrow-long">
           <img src="img/icon-right-arrow-verylong.svg" alt="right arrow"
@@ -318,25 +318,25 @@
   <footer class="footer footer-index">
     <div class="footer__footer-content">
       <div class="footer__logo footer__logo-index">
-        <img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image" width="152" height="24">
+        <a href="https://catenergy.html" aria-label="footer catenergy"><img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image" width="152" height="24"></a>
       </div>
       <ul class="footer__social-links">
         <li class="footer__social-links-li">
-          <a href="https://vk.com" class="footer__vk-link">
+          <a href="https://vk.com" class="footer__vk-link" aria-label="vk logo social icon">
             <svg width="22" height="12" class="footer__social-image footer__social-image-vk footer__soc-image">
               <use xlink:href="#icon-vk"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-links-li">
-          <a href="https://instagramm.com" class="footer__instagramm-link">
+          <a href="https://instagramm.com" class="footer__instagramm-link" aria-label="insta logo social icon">
             <svg width="16" height="16" class="footer__social-image footer__social-image-insta footer__soc-image">
               <use xlink:href="#icon-insta"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-links-li footer__social-links-li-facebook footer__social-links-li-facebook-index">
-          <a href="https://facebook.com" class="footer__facebook-link">
+          <a href="https://facebook.com" class="footer__facebook-link" aria-label="facebook logo social icon">
             <svg width="10" height="19" class="footer__social-image footer__social-image-fb footer-faceook footer__soc-image">
               <use xlink:href="#icon-fb"></use>
             </svg>
@@ -344,7 +344,7 @@
         </li>
       </ul>
       <div class="footer__right-logo">
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization" aria-label="footer logo social icon">
           <span class="footer__name-org footer__name-org-index">HTML Academy</span>
           <svg xmlns="http://www.w3.org/2000/svg" class="footer__right-logo-link-organization svg" width="27"
             height="34.09" viewBox="0 0 27.943 34.09">
