fixed a lof of content

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -218,8 +218,9 @@
               </picture>
             </a>
             <div class="main-catalog__good-data">
-              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog two"><span class="main-catalog__good-header">Cat Energy
-                  <span class="main-catalog__good-header-sub">PRO 500 г</span></span></a>
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog two"><span
+                  class="main-catalog__good-header">Cat Energy
+                  PRO 500 г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__less-than-thousand">Объем </span>
                 <span class="main-catalog__good-volume-numbers">500 г </span>
@@ -261,9 +262,10 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-second">
-              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog three"><span class="main-catalog__good-header">Cat Energy
-                  <span class="main-catalog__good-header-sub main-catalog__good-header-sub-second">PRO 1000
-                    г</span></span></a>
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog three"><span
+                  class="main-catalog__good-header">Cat Energy
+                  PRO 1000
+                  г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__more-than-thousand">Объем </span>
                 <span class="main-catalog__good-volume-numbers">1000 г </span>
@@ -300,8 +302,9 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-third">
-              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog fourth"><span class="main-catalog__good-header">Cat Energy
-                  <span class="main-catalog__good-header-sub">PRO 500 г</span></span></a>
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog fourth"><span
+                  class="main-catalog__good-header">Cat Energy
+                  PRO 500 г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__less-than-thousand">Объем </span>
                 <span class="main-catalog__good-volume-numbers">500 г </span>
@@ -316,7 +319,8 @@
               </div>
             </div>
           </div>
-          <a class="main-catalog__good-order main-catalog__good-order-third-image" href="basket.html" aria-label="order button">Заказать</a>
+          <a class="main-catalog__good-order main-catalog__good-order-third-image" href="basket.html"
+            aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good main-catalog__good-fourth-item">
@@ -338,9 +342,10 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-fourth">
-              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog fifth"><span class="main-catalog__good-header">Cat Energy
-                  <span class="main-catalog__good-header-sub main-catalog__good-header-sub-fourth">PRO 1000
-                    г</span></span></a>
+              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog fifth"><span
+                  class="main-catalog__good-header">Cat Energy
+                  PRO 1000
+                  г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__more-than-thousand">Объем </span>
                 <span class="main-catalog__good-volume-numbers">1000 г </span>
@@ -378,9 +383,10 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-fifth">
-              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog sixth"><span class="main-catalog__good-header">Cat
-                  Energy <span class="main-catalog__good-header-sub main-catalog__good-header-sub-fifth">SLIM 500
-                    г</span></span></a>
+              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog sixth"><span
+                  class="main-catalog__good-header">Cat
+                  Energy SLIM 500
+                  г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__less-than-thousand">Объем </span>
                 <span class="main-catalog__good-volume-numbers">500 г </span>
@@ -418,9 +424,10 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-sixth">
-              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog seventh"><span class="main-catalog__good-header">Cat
-                  Energy <span class="main-catalog__good-header-sub main-catalog__good-header-sub-sixth">SLIM 1000
-                    г</span></span></a>
+              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog seventh"><span
+                  class="main-catalog__good-header">Cat
+                  Energy SLIM 1000
+                  г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__more-than-thousand">Объем </span>
                 <span class="main-catalog__good-volume-numbers">1000 г </span>
@@ -457,9 +464,10 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-seventh">
-              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog eights"><span class="main-catalog__good-header">Cat
-                  Energy <span class="main-catalog__good-header-sub main-catalog__good-header-sub-seventh">SLIM 500
-                    г</span></span></a>
+              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog eights"><span
+                  class="main-catalog__good-header">Cat
+                  Energy SLIM 500
+                  г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__less-than-thousand">Объем </span>
                 <span class="main-catalog__good-volume-numbers">500 г </span>
@@ -474,7 +482,8 @@
               </div>
             </div>
           </div>
-          <a class=" main-catalog__good-order main-catalog__good-order-last-child" href="basket.html" aria-label="order button">Заказать</a>
+          <a class=" main-catalog__good-order main-catalog__good-order-last-child" href="basket.html"
+            aria-label="order button">Заказать</a>
         </div>
       </div>
       <div class="main-catalog__good find-all-goods">
@@ -578,7 +587,8 @@
                   </span>
                 </div>
               </div>
-              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">Заказать</a>
+              <a class="additional-goods__article-order" href="basket.html"
+                aria-label="order additional good">Заказать</a>
             </div>
           </article>
         </div>
@@ -608,7 +618,8 @@
   <footer class="footer footer-index footer-catalog">
     <div class="footer__footer-content">
       <div class="footer__logo footer__logo-index">
-        <a href="https://catenergy.com" aria-label="footer left logo"><img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image"></a>
+        <a href="https://catenergy.com" aria-label="footer left logo"><img src="img/logo-footer.svg" alt="logo-footer"
+            class="footer__logo-image"></a>
       </div>
       <ul class="footer__social-links">
         <li class="footer__social-links-li">
@@ -635,7 +646,8 @@
         </li>
       </ul>
       <div class="footer__right-logo">
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization" aria-label="footer logo social icon">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization"
+          aria-label="footer logo social icon">
           <span class="footer__name-org"> HTML Academy</span>
 
 
