--- a/source/catalog.html
+++ b/source/catalog.html
@@ -262,8 +262,8 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-second">
-              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog three"><span
-                  class="main-catalog__good-header">Cat Energy
+              <a href="good.html" class="main-catalog__link-to-goods main-catalog__link-to-goods-second-item" aria-label="good in catalog three"><span
+                  class="main-catalog__good-header main-catalog__good-header-second-item">Cat Energy
                   PRO 1000
                   г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
@@ -342,8 +342,8 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-fourth">
-              <a href="good.html" class="main-catalog__link-to-goods" aria-label="good in catalog fifth"><span
-                  class="main-catalog__good-header">Cat Energy
+              <a href="good.html" class="main-catalog__link-to-goods main-catalog__link-to-goods-fourth" aria-label="good in catalog fifth"><span
+                  class="main-catalog__good-header main-catalog__good-header-fourth">Cat Energy
                   PRO 1000
                   г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
@@ -424,8 +424,8 @@
               </picture>
             </a>
             <div class="main-catalog__good-data main-catalog__good-data-sixth">
-              <a href="goods.html" class="main-catalog__link-to-goods" aria-label="good in catalog seventh"><span
-                  class="main-catalog__good-header">Cat
+              <a href="goods.html" class="main-catalog__link-to-goods main-catalog__link-to-goods-sixth" aria-label="good in catalog seventh"><span
+                  class="main-catalog__good-header main-catalog__good-header-sixth">Cat
                   Energy SLIM 1000
                   г</span></a>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
